# ai

./: .gitignore  .nvimrc  example.ai  main.py  mypy.ini  pyproject.toml  requirements.txt  setup-env
src/ai/: chat_stream.py  cli.py  colors.py  config.py  document.py  embedded.py  main.py  markdown.py  message.py  output.py  streaming.py
src/ai/providers/: __init__.py  anthropic.py  openai.py
