[project]
name = "ai"
version = "0.1.0"
dependencies = [
    "anthropic",
    "openai",
    "pydantic",
]

[project.scripts]
ai = "ai.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110

[tool.autoimport.common_statements]
"np" = "import numpy as np"
"pd" = "import pandas as pd"
"pprint" = "from pprint import pprint"
"dataclass" = "from dataclasses import dataclass"
"contextmanager" = "from contextlib import contextmanager"

[tool.autoimport]
disable_move_to_top = true
